--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "default_title": "Click me",
     "default_popup": "popup.html"
   },
-  "permissions": ["scripting"],
+  "permissions": ["scripting", "alarms"],
   "host_permissions": ["<all_urls>"],
   "icons": {
     "32": "images/icon32.png",
